telefoonnummer en email toegevoegd

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <title>Vincent Bremer Webdevelopment</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
     <div class="centered">
-        <img src="images/logo.svg" class="logo" alt="Vincent Bremer Webdevelopment">
+        <div class="image">
+            <img src="images/logo.svg" class="logo" alt="Vincent Bremer Webdevelopment">
+        </div>
+        <div class="text">
+            <span><i class="icon is-phone"></i> 06 504 909 16</span>
+            <span><i class="icon is-email"></i> vincent@vbwd.nl</span>
+        </div>
     </div>
 </body>
 </html>
