--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="images/logo.svg" class="logo" alt="Vincent Bremer Webdevelopment">
         </div>
         <div class="text">
-            <span><i class="icon is-phone"></i> 06 504 909 16</span>
-            <span><i class="icon is-email"></i> vincent@vbwd.nl</span>
+            <div><i class="icon is-phone"></i> 06 504 909 16</div>
+            <div><i class="icon is-email"></i> <span class="mailto" data-user="tnecniv" data-website="ln.dwbv"></span></div>
         </div>
     </div>
 </body>
