--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Vincent Bremer Webdevelopment</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
@@ -12,10 +13,10 @@
         <div class="image">
             <img src="images/logo.svg" class="logo" alt="Vincent Bremer Webdevelopment">
         </div>
-        <div class="text">
-            <div><i class="icon is-phone"></i> 06 504 909 16</div>
-            <div><i class="icon is-email"></i> <span class="mailto" data-user="tnecniv" data-website="ln.dwbv"></span></div>
-        </div>
+        <ul class="contact">
+            <li><i class="icon is-phone"></i>06 504 909 16</li>
+            <li><i class="icon is-email"></i><span class="mailto" data-user="tnecniv" data-website="ln.dwbv"></span></li>
+        </ul>
     </div>
 </body>
 </html>
